--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ main .col {
 }
 
 .content-wrapper {
-    min-height: 667px;
+    min-height: calc(100vh - 157px);
     height: auto;
     background-color: #ecf0f5;
 }
